<resources>
    <string name="app_name">Note It</string>
    <string name="empty_note_placeholder_text">You didn\'t have any note yet. \nUse plus (+) button below to take a note.</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="night_mode">Night Mode</string>
    <string name="contact">Contact</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="rate_us">Rate Us</string>
    <string name="donate">Donate</string>
    <string name="owner_mail">sen.halitt@gmail.com</string>
    <string name="mailto">mailto:</string>
    <string name="send_email">Send Email..</string>
    <string name="no_mail_client">There are no email clients installed.</string>
    <string name="share_app_url">Hey!!! Check out this cool app here: https://play.google.com/store/apps/details?id=com.halitsen.bitcurrency</string>
    <string name="playstore_url">https://play.google.com/store/apps/details?id=com.halitsen.bitcurrency</string>
    <string name="text_plain">text/plain</string>
    <string name="share">Share..</string>
    <string name="share2">Share</string>
    <string name="delete">Delete</string>
    <string name="delete_all_notes">Clear All Notes</string>
    <string name="understood">Understood</string>
    <string name="create_password">Create Password</string>
    <string name="pass_empty_warning">You can\'t leave your password empty</string>
    <string name="pass_match_warning">Your passwords don\'t match</string>
    <string name="password_created">Your password created</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="password_again">Password Again</string>
    <string name="encyption_info">Create a password.\nFor your encrypted notes.</string>
    <string name="encrypted_notes">Encrypted Notes</string>
    <string name="wron_pass_warning">Wrong Password, please try again.</string>
    <string name="set_password_yet">You didn\'t set a password yet.</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="sure_to_delete_notes">Are you sure to delete all notes ?</string>
    <string name="clear">Clear..</string>
    <string name="dont_have_note_warning">You don\'t have a note to share.</string>
    <string name="send_note">Send Note..</string>
    <string name="password_empty">You can\'t leave your password empty.</string>
    <string name="check_you_pass">Check your password</string>
    <string name="password_changed">Password Changed..</string>
    <string name="night_mode_active">Night mode active</string>
    <string name="day_mode_active">Day mode active</string>
    <string name="description_placeholder">description</string>
    <string name="date_placeholder">23-32-2019</string>
</resources>
