<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <TextView
        android:id="@+id/lock_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:padding="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textColor="@color/darkMainPrimaryColor"
        app:fontFamily="sans-serif-medium"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lock_title"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:fontFamily="sans-serif-light"
        android:layout_marginRight="12dp"
        android:background="@android:color/transparent"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/cursor_color" />

    <RelativeLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/password_edit_text">

        <TextView
            android:id="@+id/cancel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/okey__text"
            android:text="@string/cancel"
            app:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginRight="12dp"
            android:textColor="#000"
            android:textColorHint="@color/darkMainPrimaryColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/okey__text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="12dp"
            android:text="@string/ok"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="#000"
            android:textColorHint="@color/darkMainPrimaryColor"
            android:textSize="15sp" />
    </RelativeLayout>
    </RelativeLayout>