<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/lock_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/darkMainPrimaryColor"
            android:layout_marginTop="20dp"
            android:text="@string/encrypted_notes"
            android:textSize="18sp"
            app:fontFamily="sans-serif-medium"
            android:layout_alignParentTop="true" />


        <TextView
            android:id="@+id/lock_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/lock_title"
            android:layout_marginRight="10dp"
            android:textColor="@color/darkMainPrimaryColor"
            android:layout_marginTop="20dp"
            android:text="@string/encyption_info"
            android:textSize="16sp"
            app:fontFamily="sans-serif" />


        <LinearLayout
            android:id="@+id/pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="30dp"
            android:layout_marginTop="36dp"
            android:layout_below="@id/lock_info"
            android:paddingLeft="30dp">

            <EditText
                android:id="@+id/pass_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:layout_marginLeft="12dp"
                android:textColor="@color/darkMainPrimaryColor"
                app:fontFamily="sans-serif" />

            <EditText
                android:id="@+id/pass_again_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_again"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:layout_below="@id/pass_edit_text"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:layout_marginLeft="12dp"
                android:textColor="@color/darkMainPrimaryColor"
                app:fontFamily="sans-serif" />

        </LinearLayout>

        <TextView
            android:id="@+id/create_password_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/change_pass_button_border"
            android:text="@string/create_password"
            android:gravity="center"
            android:layout_margin="30dp"
            android:layout_below="@id/pass_layout"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:textSize="17sp"
            android:textColor="@color/darkMainPrimaryColor"
            app:fontFamily="sans-serif" />

    </RelativeLayout>
</layout>