<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="settingViewModel"
            type="halit.sen.noteit.setting.SettingViewModel" />
    </data>
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".setting.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/mainPrimaryColor"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/setting_back_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_back" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/setting_toolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/change_pass_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingRight="30dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:layout_centerVertical="true"
                android:textSize="17sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/darkMainPrimaryColor"
                app:fontFamily="sans-serif"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_change" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/darkMainPrimaryColor">
        </View>

        <RelativeLayout
            android:id="@+id/night_mode_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingRight="30dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_mode"
                android:layout_centerVertical="true"
                android:textSize="17sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/darkMainPrimaryColor"
                app:fontFamily="sans-serif"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/night_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:checked="false"
                app:thumbTint="@color/darkMainPrimaryColor">
            </androidx.appcompat.widget.SwitchCompat>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/darkMainPrimaryColor">
        </View>

        <RelativeLayout
            android:id="@+id/contact_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingRight="30dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:layout_centerVertical="true"
                android:textSize="17sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/darkMainPrimaryColor"
                app:fontFamily="sans-serif"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_mail" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/darkMainPrimaryColor">
        </View>

        <RelativeLayout
            android:id="@+id/share_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_with_friends"
                android:layout_centerVertical="true"
                android:textSize="17sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/darkMainPrimaryColor"
                app:fontFamily="sans-serif"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_share" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/darkMainPrimaryColor">

        </View>

        <RelativeLayout
            android:id="@+id/rate_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_us"
                android:layout_centerVertical="true"
                android:textSize="17sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/darkMainPrimaryColor"
                app:fontFamily="sans-serif"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_rate_star" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/darkMainPrimaryColor">
        </View>

        <RelativeLayout
            android:id="@+id/delete_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_all_notes"
                android:layout_centerVertical="true"
                android:textSize="17sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/darkMainPrimaryColor"
                app:fontFamily="sans-serif"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_rubbish" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/darkMainPrimaryColor">
        </View>

        <RelativeLayout
            android:id="@+id/donate_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate"
                android:layout_centerVertical="true"
                android:textSize="17sp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/darkMainPrimaryColor"
                app:fontFamily="sans-serif"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_donate_dolar" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/darkMainPrimaryColor">
        </View>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>

</layout>